5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4154/executions/1637_2447.log
== SUBMITION (2019-04-11 10:20:56) 
-- CODE:
a = float(input('quanto vey? '))
b= float(input('qunto veeeey: '))

if a == b:
	print("Troco de",a-b)
if b>a: 
	print("Troco de",a-b)
-- EXECUTION TIME:
0.146526
-- TEST CASE 1:
---- input:
38.0
12.0
---- correct output:
Falta 26.0
---- user output:

-- TEST CASE 2:
---- input:
32.0
60.0
---- correct output:
Troco de 28.0
---- user output:
Troco de -28.0
-- TEST CASE 3:
---- input:
516.0
516.0
---- correct output:
Troco de 0.0
---- user output:
Troco de 0.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 10:21:30) 
-- CODE:
a = float(input('quanto vey? '))
b= float(input('qunto veeeey: '))

if a == b:
	print("Troco de",round(a-b.2))
if b>a: 
	print("Troco de",round(a-b,2))
-- EXECUTION TIME:
0.171857
-- ERROR:
  File "/home/codebench/codes/1637/2447/main.py", line 5
    print("Troco de",round(a-b.2))
                               ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 10:22:00) 
-- CODE:
a = float(input('quanto vey? '))
b= float(input('qunto veeeey: '))

if a == b:
	print("Troco de",round(a-b.2))
if b>a: 
	print("Falta",round(a-b,2))
-- EXECUTION TIME:
0.134544
-- ERROR:
  File "/home/codebench/codes/1637/2447/main.py", line 5
    print("Troco de",round(a-b.2))
                               ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 10:22:07) 
-- CODE:
a = float(input('quanto vey? '))
b= float(input('qunto veeeey: '))

if a == b:
	print("Troco de",round(a-b.2))
if b>a: 
	print("Falta",round(a-b,2))
-- EXECUTION TIME:
0.168076
-- ERROR:
  File "/home/codebench/codes/1637/2447/main.py", line 5
    print("Troco de",round(a-b.2))
                               ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 10:22:07) 
-- CODE:
a = float(input('quanto vey? '))
b= float(input('qunto veeeey: '))

if a == b:
	print("Troco de",round(a-b.2))
if b>a: 
	print("Falta",round(a-b,2))
-- EXECUTION TIME:
0.201306
-- ERROR:
  File "/home/codebench/codes/1637/2447/main.py", line 5
    print("Troco de",round(a-b.2))
                               ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 10:22:07) 
-- CODE:
a = float(input('quanto vey? '))
b= float(input('qunto veeeey: '))

if a == b:
	print("Troco de",round(a-b.2))
if b>a: 
	print("Falta",round(a-b,2))
-- EXECUTION TIME:
0.274384
-- ERROR:
  File "/home/codebench/codes/1637/2447/main.py", line 5
    print("Troco de",round(a-b.2))
                               ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 10:22:09) 
-- CODE:
a = float(input('quanto vey? '))
b= float(input('qunto veeeey: '))

if a == b:
	print("Troco de",round(a-b.2))
if b>a: 
	print("Falta",round(a-b,2))
-- ERROR:
File "XXXX", line 5
    print("Troco de",round(a-b.2))
                               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 10:22:20) 
-- CODE:
a = float(input('quanto vey? '))
b= float(input('qunto veeeey: '))

if a == b:
	print("Troco de",round(a-b,2))
if b>a: 
	print("Falta",round(a-b,2))
-- EXECUTION TIME:
0.144314
-- TEST CASE 1:
---- input:
38.0
12.0
---- correct output:
Falta 26.0
---- user output:

-- TEST CASE 2:
---- input:
32.0
60.0
---- correct output:
Troco de 28.0
---- user output:
Falta -28.0
-- TEST CASE 3:
---- input:
516.0
516.0
---- correct output:
Troco de 0.0
---- user output:
Troco de 0.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 10:22:26) 
-- CODE:
a = float(input('quanto vey? '))
b= float(input('qunto veeeey: '))

if a == b:
	print("Troco de",round(a-b,2))
if b>a: 
	print("Falta",round(a-b,2))
-- ERROR:
File "XXXX", line 5
    print("Troco de",round(a-b.2))
                               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 10:22:58) 
-- CODE:
a = float(input('quanto vey? '))
b= float(input('qunto veeeey: '))

if a == b:
	print("Troco de",round(b-a,2))
elif b>a: 
	print("Falta",round(b-a,2))
-- EXECUTION TIME:
0.208312
-- TEST CASE 1:
---- input:
38.0
12.0
---- correct output:
Falta 26.0
---- user output:

-- TEST CASE 2:
---- input:
32.0
60.0
---- correct output:
Troco de 28.0
---- user output:
Falta 28.0
-- TEST CASE 3:
---- input:
516.0
516.0
---- correct output:
Troco de 0.0
---- user output:
Troco de 0.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 10:23:00) 
-- CODE:
a = float(input('quanto vey? '))
b= float(input('qunto veeeey: '))

if a == b:
	print("Troco de",round(b-a,2))
elif b>a: 
	print("Falta",round(b-a,2))
-- ERROR:
File "XXXX", line 5
    print("Troco de",round(a-b.2))
                               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 10:23:11) 
-- CODE:
a = float(input('quanto vey? '))
b= float(input('qunto veeeey: '))

if a == b:
	print("Troco de",round(b-a,2))
elif b>a: 
	print("Falta",round(b-a,2))
-- ERROR:
File "XXXX", line 5
    print("Troco de",round(a-b.2))
                               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 10:24:17) 
-- CODE:
a = float(input('quanto vey? '))
b= float(input('qunto veeeey: '))

if a =< b:
	print("Troco de",round(b-a,2))
elif a>b: 
	print("Falta",round(b-a,2))
-- EXECUTION TIME:
0.20438
-- ERROR:
  File "/home/codebench/codes/1637/2447/main.py", line 4
    if a =< b:
         ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 10:24:26) 
-- CODE:
a = float(input('quanto vey? '))
b= float(input('qunto veeeey: '))

if a <= b:
	print("Troco de",round(b-a,2))
elif a>b: 
	print("Falta",round(b-a,2))
-- OUTPUT:
Falta -26.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 10:24:42) 
-- CODE:
a = float(input('quanto vey? '))
b= float(input('qunto veeeey: '))

if a <= b:
	print("Troco de",round(a-b,2))
elif a>b: 
	print("Falta",round(b-a,2))
-- OUTPUT:
Falta -26.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 10:24:44) 
-- CODE:
a = float(input('quanto vey? '))
b= float(input('qunto veeeey: '))

if a <= b:
	print("Troco de",round(a-b,2))
elif a>b: 
	print("Falta",round(b-a,2))
-- EXECUTION TIME:
0.15361
-- TEST CASE 1:
---- input:
38.0
12.0
---- correct output:
Falta 26.0
---- user output:
Falta -26.0
-- TEST CASE 2:
---- input:
32.0
60.0
---- correct output:
Troco de 28.0
---- user output:
Troco de -28.0
-- TEST CASE 3:
---- input:
516.0
516.0
---- correct output:
Troco de 0.0
---- user output:
Troco de 0.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 10:24:45) 
-- CODE:
a = float(input('quanto vey? '))
b= float(input('qunto veeeey: '))

if a <= b:
	print("Troco de",round(a-b,2))
elif a>b: 
	print("Falta",round(b-a,2))
-- OUTPUT:
Falta -26.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 10:25:23) 
-- CODE:
a = float(input('quanto vey? '))
b= float(input('qunto veeeey: '))

if a > b:
	print("Troco de",round(a-b,2))
elif a<=b: 
	print("Falta",round(b-a,2))
-- EXECUTION TIME:
0.216244
-- TEST CASE 1:
---- input:
38.0
12.0
---- correct output:
Falta 26.0
---- user output:
Troco de 26.0
-- TEST CASE 2:
---- input:
32.0
60.0
---- correct output:
Troco de 28.0
---- user output:
Falta 28.0
-- TEST CASE 3:
---- input:
516.0
516.0
---- correct output:
Troco de 0.0
---- user output:
Falta 0.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 10:25:23) 
-- CODE:
a = float(input('quanto vey? '))
b= float(input('qunto veeeey: '))

if a > b:
	print("Troco de",round(a-b,2))
elif a<=b: 
	print("Falta",round(b-a,2))
-- OUTPUT:
Troco de 26.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 10:25:31) 
-- CODE:
a = float(input('quanto vey? '))
b= float(input('qunto veeeey: '))

if a > b:
	print("Troco de",round(a-b,2))
elif a<=b: 
	print("Falta",round(b-a,2))
-- OUTPUT:
Troco de 26.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 10:25:52) 
-- CODE:
a = float(input('quanto vey? '))
b= float(input('qunto veeeey: '))

if a > b:
	print("Falta",round(a-b,2))
elif a<=b: 
	print("Troco de",round(b-a,2))
-- EXECUTION TIME:
0.160681
-- TEST CASE 1:
---- input:
38.0
12.0
---- correct output:
Falta 26.0
---- user output:
Falta 26.0
-- TEST CASE 2:
---- input:
32.0
60.0
---- correct output:
Troco de 28.0
---- user output:
Troco de 28.0
-- TEST CASE 3:
---- input:
516.0
516.0
---- correct output:
Troco de 0.0
---- user output:
Troco de 0.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
